/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Savannah Osburn
 */

package ucf.assignments;

import java.util.ArrayList;

public class AllLists {

    // Shouldn't be strings, determine proper type later
    public ArrayList<String> toDoList;

    // Determine proper return types for testing
    public String addToDoList() {

        // Get the to do list
        // Add it to the arraylist of to do lists
        // Return a string of the list that was added for testing
        //      or return the new arraylist?

        return null; // Change later
    }

    public String deleteToDolist() {
        // Get/Find the list
        // Remove it from the arrayList of lists
        // Return a string of the list or the new arraylist for testing

        return null; // Change return type later
    }
}
