/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Savannah Osburn
 */

package ucf.assignments;

import java.util.Date;

public class Task {

    public Boolean completed;
    public String taskTitle;
    public String taskDescription;
    
    // Determine proper type for this
    public Date date;

    // Determine proper return types
    public String updateDate() {

        // Assigns date
        // Returns date for testing

        return null; // change later
    }

    public String updateDescription(String description) {

        // Assigns descriptions
        // Returns description for testing

        return null; // Change later
    }
    
    public String updateTitle(String title) {

        // Assigns a title to the task
        // Returns the title for testing

        return null; // Change later
    }

    // Probably should pass through something different
    public Boolean isCompleted(Boolean complete) {

        // Controller determines if user marked an item as complete
        // If it was marked complete
            // Method returns true
        // If it was not marked complete
            // Method returns false

        return null; // Change later
    }

    public String toString() {

        // Takes in something like the date and ensures that it's a string
        // Returns a string for testing

        return null; // Change later
    }

}
